# gitlab-bud-chart

./: .env.example  .gitignore  .gitkeep  CONTRIBUTING.md  README.md  pyproject.toml  ruff.toml  test_config.json
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: README.md  ci-simplified.yml  ci.yml  docker-build.yml  e2e.yml  release.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: charts.py  gitlab_config.py  issues.py
backend/app/models/: chart.py  issue.py
backend/app/services/: chart_analyzer.py  data_quality.py  gitlab_client.py  issue_analyzer.py  issue_service.py  performance_optimizer.py  search_service.py  session_manager.py
backend/app/utils/: business_days.py  issue_filters.py  quarter_utils.py  retry.py  shared_filters.py
backend/tests/: test_api_analysis.py  test_api_issues.py  test_chart_analyzer.py  test_issue_analyzer.py  test_issue_service.py  test_main.py
backend/tests/integration/: test_gitlab_integration.py
backend/tests/performance/: test_issue_performance.py
docker/: .env.example  docker-compose.gitlab.yml  docker-compose.gitlab15.yml  docker-compose.local.yml  docker-compose.yml
docker/nginx/: default.conf
docs/: proxy-configuration.md  sample.md  sample_label_rule.md
docs/api/: README.md
docs/develop/: integration-checklist.md  plan.md  prompt.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  playwright.config.manual.ts  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/scripts/: docker-entrypoint.sh
scripts/: create_test_issues.py  create_test_token.py  final-verification.sh  generate_gitlab_pat.sh  generate_gitlab_test_data.py  manual_gitlab_setup.md  mock_gitlab_test.py  run-e2e.sh  run-phase1-e2e.sh  setup.sh  setup_gitlab_test_data.py
(+122 files in other folders)
