[project]
name = "bud-chart"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yukio.kurosawa", email = "yukio.kurosawa@g.softbank.co.jp" }
]
dependencies = [
    "pandas==2.2.2",
    "matplotlib==3.9.0",
    "jpholiday==0.1.10",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.10.0",
    "ruff>=0.4.10",
    "pytest>=8.2.2",
    "pydeps",
    "pytest-archon>=0.0.6",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
